Hide inbox section on mobile and prevent horizontal overflow on body and html

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -18,6 +18,11 @@ body {
   letter-spacing: -0.03em;
 }
 
+body,
+html {
+  overflow-x: hidden;
+}
+
 // h1,
 // h2,
 // h3 {
